--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,48 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.jacoco</groupId>
+    	<artifactId>jacoco-maven-plugin</artifactId>
+    	<version>0.7.6.201602180812</version>
+    	<type>maven-plugin</type>
+    </dependency>
+    <dependency>
+    	<groupId>org.jacoco</groupId>
+    	<artifactId>org.jacoco.agent</artifactId>
+    	<version>0.7.6.201602180812</version>
+    	<classifier>runtime</classifier>
+    </dependency>
   </dependencies>
+  
+  <build>
+  	<plugins>
+  		<!-- Unit tests -->
+  		<plugin>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<configuration>
+  				<source>1.8</source>
+  				<target>1.8</target>
+  			</configuration>
+  		</plugin>
+  		
+  		<!-- Integration tests -->
+  	
+  		<!-- Jacoco -->
+  		<plugin>
+  			<groupId>org.jacoco</groupId>
+    		<artifactId>jacoco-maven-plugin</artifactId>
+    		<version>0.7.6.201602180812</version>
+    		<executions>
+    			<execution>
+    				<id>default-prepare-agent</id>
+    				<goals>
+    					<goal>prepare-agent</goal>
+    				</goals>
+    			</execution>
+    		</executions>
+  		</plugin>
+  	</plugins>
+  </build>
+  
 </project>
