--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+    <!-- Sonar -->
+    <!-- The destination file for the code coverage report has to be set to the same value
+         in the parent pom and in each module pom. Then JaCoCo will add up information in
+         the same report, so that, it will give the cross-module code coverage. -->
+    <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
+    <sonar.language>java</sonar.language>
   </properties>
 
   <dependencies>
@@ -35,34 +43,72 @@
     </dependency>
   </dependencies>
   
+  
+  <!-- Unit tests -->
   <build>
   	<plugins>
-  		<!-- Unit tests -->
-  		<plugin>
-  			<artifactId>maven-compiler-plugin</artifactId>
-  			<configuration>
-  				<source>1.8</source>
-  				<target>1.8</target>
-  			</configuration>
-  		</plugin>
-  		
-  		<!-- Integration tests -->
-  	
-  		<!-- Jacoco -->
-  		<plugin>
-  			<groupId>org.jacoco</groupId>
-    		<artifactId>jacoco-maven-plugin</artifactId>
-    		<version>0.7.6.201602180812</version>
-    		<executions>
-    			<execution>
-    				<id>default-prepare-agent</id>
-    				<goals>
-    					<goal>prepare-agent</goal>
-    				</goals>
-    			</execution>
-    		</executions>
-  		</plugin>
-  	</plugins>
+	  	<plugin>
+	  		<groupId>org.apache.maven.plugins</groupId>
+		  	<artifactId>maven-compiler-plugin</artifactId>
+		  	<configuration>
+			  	<source>1.8</source>
+			  	<target>1.8</target>
+		  	</configuration>
+	  	</plugin>
+	 </plugins>
   </build>
   
+  <profiles>
+    <profile>
+      <id>sonar-coverage</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      
+	  <build>
+	  	<pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>0.7.6.201602180812</version>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+	  	<plugins>
+	  		<!-- Integration tests -->
+	  		
+	  		<!-- Jacoco -->
+	  		<plugin>
+	  			<groupId>org.jacoco</groupId>
+	    		<artifactId>jacoco-maven-plugin</artifactId>
+	    		<configuration>
+              		<append>true</append>
+            	</configuration>
+	    		<executions>
+	    			<execution>
+	    				<id>agent-for-ut</id>
+		                <goals>
+		                  <goal>prepare-agent</goal>
+		                </goals>
+					</execution>
+					<execution>
+						<id>agent-for-it</id>
+						<goals>
+							<goal>prepare-agent-integration</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+	    		</executions>
+	  		</plugin>
+	  	</plugins>
+	  </build>
+  	</profile>
+  </profiles>
 </project>
