--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
     	<version>0.7.6.201602180812</version>
     	<classifier>runtime</classifier>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-surefire-plugin</artifactId>
+    	<version>2.16</version>
+    	<type>maven-plugin</type>
+    </dependency>
   </dependencies>
   
   
@@ -107,6 +113,13 @@
 					</execution>
 	    		</executions>
 	  		</plugin>
+	  		<plugin>
+		  		<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<runOrder>random</runOrder>
+				</configuration>
+			</plugin>
 	  	</plugins>
 	  </build>
   	</profile>
