--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+    <!-- Sonar -->
+    <!-- The destination file for the code coverage report has to be set to the same value
+         in the parent pom and in each module pom. Then JaCoCo will add up information in
+         the same report, so that, it will give the cross-module code coverage. -->
+    <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
+    <sonar.language>java</sonar.language>
   </properties>
 
   <dependencies>
@@ -20,6 +28,24 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.jacoco</groupId>
+    	<artifactId>jacoco-maven-plugin</artifactId>
+    	<version>0.7.6.201602180812</version>
+    	<type>maven-plugin</type>
+    </dependency>
+    <dependency>
+    	<groupId>org.jacoco</groupId>
+    	<artifactId>org.jacoco.agent</artifactId>
+    	<version>0.7.6.201602180812</version>
+    	<classifier>runtime</classifier>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-surefire-plugin</artifactId>
+    	<version>2.16</version>
+    	<type>maven-plugin</type>
     </dependency>
   </dependencies>
   
@@ -38,54 +64,64 @@
 	 </plugins>
   </build>
   
-  <!-- BEGIN: Specific to mapping unit tests and covered code -->
   <profiles>
     <profile>
-      <id>coverage-per-test</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <!-- Minimal supported version is 2.4 -->
-            <version>2.13</version>
-            <configuration>
-              <properties>
-                <property>
-                  <name>listener</name>
-                  <value>org.sonar.java.jacoco.JUnitListener</value>
-                </property>
-              </properties>
-            </configuration>
-          </plugin>
-          
-          <plugin>
-          	<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-			<version>0.7.6.201602180812</version>
-			<executions>
-				<execution>
-					<id>default-prepare-agent</id>
-					<goals>
-						<goal>prepare-agent</goal>
-					</goals>
-				</execution>
-			</executions>
+      <id>sonar-coverage</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      
+	  <build>
+	  	<pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>0.7.6.201602180812</version>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+	  	<plugins>
+	  		<!-- Integration tests -->
+	  		
+	  		<!-- Jacoco -->
+	  		<plugin>
+	  			<groupId>org.jacoco</groupId>
+	    		<artifactId>jacoco-maven-plugin</artifactId>
+	    		<configuration>
+              		<append>true</append>
+            	</configuration>
+	    		<executions>
+	    			<execution>
+	    				<id>agent-for-ut</id>
+		                <goals>
+		                  <goal>prepare-agent</goal>
+		                </goals>
+					</execution>
+					<execution>
+						<id>agent-for-it</id>
+						<goals>
+							<goal>prepare-agent-integration</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+	    		</executions>
+	  		</plugin>
+	  		<plugin>
+		  		<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<runOrder>random</runOrder>
+				</configuration>
 			</plugin>
-          
-        </plugins>
-      </build>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.sonarsource.java</groupId>
-          <artifactId>sonar-jacoco-listeners</artifactId>
-          <version>3.8</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
+	  	</plugins>
+	  </build>
+  	</profile>
   </profiles>
-  <!-- END: Specific to mapping unit tests and covered code -->
-
 </project>
